made it so the screen wont rotate, added a new 'med' dictionary file, limit the input to alphabetical chars and if there is no input when the button is pressed the snackbar has a message to display

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:theme="@style/AppTheme"
         android:largeHeap="true">
         <activity android:name=".MainActivity"
-            android:label="@string/mainActivityLabel">
+            android:label="@string/mainActivityLabel"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -18,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SpellCorrector"
-            android:label="@string/spellCheckerLabel">
+            android:label="@string/spellCheckerLabel"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
